--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@ Welcome and Thanks for Visiting!
 
 
 <img src=srojas-mightywarrior_orig.jpg>
-
-
+<img src=SRojas.MyDefender.jpg>
+<SRojas.ShieldofFaith.jpg>
 
 
 
