--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ Welcome and Thanks for Visiting!
 
 <img src=srojas-mightywarrior_orig.jpg>
 <img src=SRojas.MyDefender.jpg>
-<SRojas.ShieldofFaith.jpg>
+<img src=SRojas.ShieldofFaith.jpg>
 
 
 
