--- a/index.html
+++ b/index.html
@@ -1,3 +1,11 @@
+<style>
+  img{
+    text-align:centert;
+  }
+</style>
+
+
+
 <img src="Artboard 1.png">
 <h1>Shirlmia</h1>
 Welcome and Thanks for Visiting!
