--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@ Welcome and Thanks for Visiting!
 
 
 
-<img src=srojas-mightywarrior_orig.jpg>
-<img src=SRojas.MyDefender.jpg>
-<img src=SRojas.ShieldofFaith.jpg>
+<img src=srojas-MightyWarrior1_orig.jpg>
+<img src=SRojas.HunterBcomesPrey1.jpg>
+<img src=SRojas.ShieldofFaith1.jpg>
 
 
 
