--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
 </style>
 
 
-
+<body>
 <img src="Artboard 1.png">
 <h1>Shirlmia</h1>
 Welcome and Thanks for Visiting!
 
 
 
-<img src=srojas-MightyWarrior1_orig.jpg>
+<img src=Srojas.MightyWarrior1_orig.jpg>
 <img src=SRojas.HunterBcomesPrey1.jpg>
 <img src=SRojas.ShieldofFaith1.jpg>
 
@@ -23,3 +23,4 @@ Welcome and Thanks for Visiting!
 <img src=iconfinder_1-04_2299378.png>
 <img src=iconfinder_1-07_2311227.png>
 <img src=iconfinder_LinkedIn_3698244.png>
+<body>
