--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@ Welcome and Thanks for Visiting!
 
 
 
-<img src=Srojas.MightyWarrior1_orig.jpg>
-<img src=SRojas.HunterBcomesPrey1.jpg>
+<img src=SRojas.MightyWarrior1.jpg>
+<img src=SRojas.HunterBecomesPrey1.jpg>
 <img src=SRojas.ShieldofFaith1.jpg>
 
 
