--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   
 <style>
   img{
-    text-align:centert;
- background-color#F28E48;
+    text-align:center;
+ background-color:#F28E48;
   }
 </style>
 
