--- a/about.html
+++ b/about.html
@@ -2,7 +2,8 @@
 <h1>About me</h1>
 
 body{
-    text-align:left
+    text-align:left;
+background-color:#3C3835;
     }
     
    <h1>As an artist, believe in every art form, since there are multiple ways of expressing what matters and what is important. An important aspect of the artwork is to showcase a meaningful yet playful way in ceramics.</h1> 
