--- a/about.html
+++ b/about.html
@@ -1,9 +1,15 @@
 <!doctype html>
-<h1>About me</h1>
+<html>
+
 
 body{
     text-align:left;
 background-color:#3C3835;
     }
+    <body>
+<img src="Artboard 1.png">
+    <h1>Shirlmia</h1>
+    <h1>About me</h1>
+    
     
    <h1>As an artist, believe in every art form, since there are multiple ways of expressing what matters and what is important. An important aspect of the artwork is to showcase a meaningful yet playful way in ceramics.</h1> 
