--- a/about.html
+++ b/about.html
@@ -4,9 +4,9 @@
 <style>    
     
 body{
-    text-align:left;    
+    text-align:center;    
 background-color:#3C3835;
-    Color: white
+    Color: #F6F2EF
     }
     <body>
 <img src="Artboard 1.png">
