--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
 body{
     text-align:center;    
 background-color:#3C3835;
-    Color: #F6F2EF
+    Color: White 
     }
     <body>
 <img src="Artboard 1.png">
