--- a/about.html
+++ b/about.html
@@ -4,9 +4,9 @@
 <style>    
     
 body{
-    text-align:center;    
+    text-align: center;    
 background-color:#3C3835;
-    Color: White 
+    Color: White; 
     }
     <body>
 <img src="Artboard 1.png">
