--- a/about.html
+++ b/about.html
@@ -6,8 +6,9 @@
 body{
     text-align: center;    
 background-color:#3C3835;
-    Color: White; 
+    color: White; 
     }
+    </style> 
     <body>
 <img src="Artboard 1.png">
     <h1>Shirlmia</h1>
@@ -16,6 +17,6 @@ background-color:#3C3835;
     
    <h1>As an artist, believe in every art form, since there are multiple ways of expressing what matters and what is important. An important aspect of the artwork is to showcase a meaningful yet playful way in ceramics.</h1> 
 
-    <body>
-    <html>
+    </body>
+    </html>
     
