--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@ background-color:#3C3835;
     }
     </style> 
     <body>
-    <h1>Shirlmia</h1>
+    <img src="Artboard 1.png">
         
         
     <h1>About me</h1>
