--- a/index.html
+++ b/index.html
@@ -9,20 +9,18 @@
   }
 </style>
 
-
 <body>
+  
+  Home | About | Work | Contact
+  </nav>
+  
 <img src="Artboard 1.png">
 <h1>Shirlmia</h1>
 Welcome and Thanks for Visiting!
 
-
-
 <img src=SRojas.MightyWarrior1.jpg>
 <img src=SRojas.HunterBecomesPrey1.jpg>
 <img src=SRojas.ShieldofFaith1.jpg>
-
-
-
 
 <img src=iconfinder_1-04_2299378.png>
 <img src=iconfinder_1-07_2311227.png>
