--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
 
 <body>
   
-  Home | About | Work | Contact
+<fontsize="6"  Home | About | Work | Contact
   </nav>
+  <div class="a">
   
 <img src="Artboard 1.png">
 
