--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 
 <body>
   
-<fontsize="6"  Home | About | Work | Contact
+  <nav>
+ Home | About | Work | Contact
   </nav>
   <div class="a">
   
