--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   
   <nav>
- Home | About | Work | Contact
+    Home | <a href="about.html">About</a> | Work | Contact
   </nav>
   <div class="a">
   
