--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,9 @@ background-color:w3-theme-grey
     <h1>Contact</h1>
     
     
-   <h1>As an artist, believe in every art form, since there are multiple ways of expressing what matters and what is important. An important aspect of the artwork is to showcase a meaningful yet playful way in ceramics.</h1> 
+   <h1>Name
+       Email
+       Phone 
 
     </body>
     </html>
