--- a/contact.html
+++ b/contact.html
@@ -16,8 +16,8 @@ background-color:w3-theme-grey
     
     
    <h1>Name
-       Email
-       Phone 
+   <h1>Email
+   <h1>Phone 
 
     </body>
     </html>
