--- a/contact.html
+++ b/contact.html
@@ -3,8 +3,7 @@
 <style>    
 body{
     text-align: center;    
-background-color:w3-theme-grey	
-;
+background-color:w3-theme-grey;
     color: White; 
     }
     </style> 
