--- a/contact.html
+++ b/contact.html
@@ -3,8 +3,9 @@
 <style>    
 body{
     text-align: center;    
-background-color:w3-theme-grey;
-    color: White; 
+background-color: White; </li>
+  <li class="w3-theme-l3">
+    <p>w3-theme-l3</p>
     }
     </style> 
     <body>
