--- a/contact.html
+++ b/contact.html
@@ -3,10 +3,11 @@
 <style>    
 body{
     text-align: center;    
-background-color: White; </li>
+background-color: White; 
+    }
+    </li>
   <li class="w3-theme-l3">
     <p>w3-theme-l3</p>
-    }
     </style> 
     <body>
     <img src="Artboard 1.png">
