--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   
   <nav>
-    Home | <a href="about.html">About</a> | Work | Contact
+    Home | <a href="about.html">About</a> | Work | <a href="contact.html">Contact</C>Contact
   </nav>
   <div class="a">
   
