--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
 body{
   
     text-align: center;    
-background-color: grey; 
+background-color: #E5DFDB;text-color: w3-theme-dark-grey; 
     }
    
       </li>
