--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   
   <nav>
-    Home | <a href="about.html">About</a> | <a href="porfolio.html">Portfolio</p> | <a href="contact.html">Contact</C>Contact
+    Home | <a href="about.html">About</a> | <a href="portfolio.html">Portfolio</p> | <a href="contact.html">Contact</C>Contact
   </nav>
   <div class="a">
   
@@ -25,7 +25,7 @@ Welcome and Thanks for Visiting!
 <img src=SRojas.ShieldofFaith1.jpg>
 
 
-<img src=iconfinder_1-04_2299378.png>
+<img src=iconfinder_1-04_2299378.png><a href="img src=iconfinder_1-04_2299378.png"/>
 <img src=iconfinder_1-07_2311227.png>
 <img src=iconfinder_LinkedIn_3698244.png>
 <body>
