--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <style>    
 body{
     text-align: center;    
-background-color:#3C3835;
+background-color:##E5DFDB;
     color: White; 
     }
     </style> 
