--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   
   <nav>
-    Home | <a href="about.html">About</a> | <a href="portfolio.html">Portfolio</p>Portfolio | <a href="contact.html">Contact</C>Contact
+    Home | <a href="about.html">About</a> | <a href="portfolio.html">Portfolio</p> | <a href="contact.html">Contact</C>Contact
   </nav>
   <div class="a">
   Welcome and Thanks for Visiting!
