--- a/index.html
+++ b/index.html
@@ -27,5 +27,5 @@
 
 <img src=iconfinder_1-04_2299378.png><a href="img src=iconfinder_1-04_2299378.png"/>
 <img src=iconfinder_1-07_2311227.png><a href="<img src=iconfinder_1-07_2311227.png/>
-<img src=iconfinder_LinkedIn_3698244.png><a href="img src=iconfinder_LinkedIn_3698244.png/>
+<img src=iconfinder_LinkedIn_3698244.png><a href="<img src=iconfinder_LinkedIn_3698244.png/>
 <body>
