--- a/index.html
+++ b/index.html
@@ -18,10 +18,14 @@
   Welcome and Thanks for Visiting!
 <img src="Artboard 1.png">
 
-<img src=SRojas.HunterBecomesPrey1.jpg>    
-<img src=SRojas.MightyWarrior1.jpg>
-<img src=SRojas.ShieldofFaith1.jpg>
+     body{
+    align:center;}
+    
+  <img src=SRojas.HunterBecomesPrey1.jpg>    
+  <img src=SRojas.MightyWarrior1.jpg>
+  <img src=SRojas.ShieldofFaith1.jpg>
 
+    
 <img src=iconfinder_LinkedIn_3698244.png><a href="<img src=iconfinder_LinkedIn_3698244.png/>
 <img src=iconfinder_1-04_2299378.png><a href="img src=iconfinder_1-04_2299378.png"/>
 <img src=iconfinder_1-07_2311227.png><a href="<img src=iconfinder_1-07_2311227.png/>
