--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 
 <nav>    
 <img src=iconfinder_LinkedIn_3698244.png><a href="<img src=iconfinder_LinkedIn_3698244.png/>
-<img src=iconfinder_1-04_2299378.png><a href=<"img src=iconfinder_1-04_2299378.png"/>
-<img src=iconfinder_1-07_2311227.png><a href="<img src=iconfinder_1-07_2311227.png/>
+    <img src=iconfinder_1-04_2299378.png><a href="<img src=iconfinder_1-04_2299378.png"/>
+    <img src=iconfinder_1-07_2311227.png><a href="<img src=iconfinder_1-07_2311227.png/>
 </nav>    
     
     
