--- a/about.html
+++ b/about.html
@@ -3,9 +3,8 @@
 <style>    
 body{
     text-align: center;    
-background-color:##E5DFDB;
-    color: White; 
-    }
+background-color: #E5DFDB;text-color:-dark-grey; 
+    }   
    </style> 
    <body>
    <img src="Artboard 1.png">
@@ -16,7 +15,7 @@ background-color:##E5DFDB;
    <h1>An important aspect of the artwork is to showcase a meaningful yet playful way in ceramics.</h1> 
        
       
-    </body>
+    <body/>
    <img src=Instagram.png/>
    <img src=Linked.png/>
    <img src=Pinterest.png/> 
