--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 <nav>    
    <img src=Instagram.png><a href="<img src=Instagram.png/>
-       img src=Linked.png><a href="<img src=Linked.png/>
+   <img src=Linked.png><a href="<img src=Linked.png/>
    <img src=Pinterest.png><a href="<img src=Pinterest.png/>
   </nav>    
         
