--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </nav>
   <div class="a">
   Welcome and Thanks for Visiting!
-<img src="Artboard 1.png">
+<img src="ShirlmiaLogo.PNG">
 
   <img src=SRojas.HunterBecomesPrey1.jpg>    
   <img src=SRojas.MightyWarrior1.jpg>
