--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
   </nav>
   <div class="a">
   Welcome and Thanks for Visiting!
-<img src="ShirlmiaLogo.png">
-
+<img src="shirlmia.logo.png">
+ 
   <img src=SRojas.HunterBecomesPrey1.jpg>    
   <img src=SRojas.MightyWarrior1.jpg>
   <img src=SRojas.ShieldofFaith1.jpg>
