--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@ background-color: #E5DFDB;text-color:-dark-grey;
     <p>w3-theme-l3</p>
    </style> 
    <body>
-   <img src="Artboard 1.png">
+   <img src="shirlmia.logo.png">
         
    <h1>Contact</h1>
     
