--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <div class="a">
   Welcome and Thanks for Visiting!
     
-   <img src="shirlmia.logo.png"> 
+   <img src="SL.png"> 
 
  
   <img src=SRojas.HunterBecomesPrey1.jpg>    
