--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@ background-color: #E5DFDB;text-color:-dark-grey;
     <p>w3-theme-l3</p>
    </style> 
    <body>
-   <img src="Artboard 1.png">
+   <img src="ShirlmiaLogo.png">
            
    <h1>About Me</h1>
     
