--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@ background-color: #E5DFDB;text-color:-dark-grey;
    </style> 
    <body>
    
-<img src="shirlmia.logo.png">
+<img src="ShirlmiaLogo.png">
         
    <h1>Contact</h1>
     
