--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@ During my travels, I have had the opportunity of seeing wildlife in a much deepe
        </body>
    
 <nav>    
-  <img src=Instagram.png><a href="<img src=Instagram.png/
+  <img src=Instagram.png><a href="<img src=Instagram.png/>
   <img src=Linked.png><a href="<img src=Linked.png/>
   <img src=Pinterest.png><a href="<img src=Pinterest.png/>
 </nav>  
