--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 
 <nav>    
   <img src=Instagram.png><a href="<img src=Instagram.png/
-  <img src=Linked.png><a href="<img src=Linked.png/>
-  <img src=Pinterest.png><a href="<img src=Pinterest.png/>
+  <img src=Linked.png><a href="<img src=Linked.png/
+  <img src=Pinterest.png><a href="<img src=Pinterest.png/
 </nav>  
       <div class="a">
          
