--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
   <img src=SRojas.ShieldofFaith1.jpg>
 
 <nav>    
-  <img src=Instagram.png><a href="<img src=Instagram.png/
-  <img src=Linked.png><a href="<img src=Linked.png/
-  <img src=Pinterest.png><a href="<img src=Pinterest.png/
+  <img src=Instagram.png><a href="<img src=Instagram.png/>
+  <img src=Linked.png><a href="<img src=Linked.png/>
+  <img src=Pinterest.png><a href="<img src=Pinterest.png/>
 </nav>  
       <div class="a">
          
