--- a/index.html
+++ b/index.html
@@ -30,11 +30,13 @@
   <img src=SRojas.ShieldofFaith1.jpg>
 
 <nav>    
-<img src=Linked.png><a href="<img src=Linked.png/>
+<img src=Linked.png><a href="<img src=Linked.png/><a href="Linked.png"Linked.png"></a>
 <img src=Instagram.png><a href="<img src=Instagram.png/>
 <img src=Pinterest.png><a href="<img src=Pinterest.png/>
 </nav>  
       <div class="a">
+  
+  <a href="Linked.png"Linked.png"></a>
          
 </body>
      
