--- a/about.html
+++ b/about.html
@@ -27,11 +27,9 @@ During my travels, I have had the opportunity of seeing wildlife in a much deepe
                 
        </body>
    
-<nav>    
-  <img src=Instagram.png><a href="<img src=Instagram.png/>
-  <img src=Linked.png><a href="<img src=Linked.png/>
-  <img src=Pinterest.png><a href="<img src=Pinterest.png/>
-</nav>  
+<img src=Linked.png><a href="Linked.png"></a>
+<img src=Instagram.png><a href="Instagram.png"></a>
+<img src=Pinterest.png><a href="Pinterest.png"></a>
       <div class="a">
  
          
