--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <img src=SRojas.ShieldofFaith1.jpg>
 
     
-<img src=Linked.png><a href="Linked.png"Linked.png"></a>
+<img src=Linked.png><a href="Linked.png"></a>
 <img src=Instagram.png><a href="Instagram.png"></a>
 <img src=Pinterest.png><a href="Pinterest.png"></a>
   
