--- a/portfolio.html
+++ b/portfolio.html
@@ -21,7 +21,7 @@ background-color: #E5DFDB;text-color:-dark-grey;
 <img src=SRojas.ShieldofFaith1.jpg>
 <img src=SRojas.Rhino.JPG>
 <img src=SRojas.ConservationWorthy.jpg>
-<img src=SRojas.MyDefender copy.jpg> 
+<img src=SRojas.MyDefender.jpg> 
 <img src=SRojas.TheDevour.jpg>     
 
        
