--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   
  body{
     text-align:center;
- background-color:#E5DFDB;
+ background-color:#ccc3ba;
   }
         </li>
   <li class="w3-theme-l3">
