--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
  body{
      
     text-align: center;    
-background-color: #E5DFDB;text-color:-dark-grey; 
+background-color: #:#ccc3ba;text-color:-dark-grey; 
     }
     
          </li>
