--- a/about.html
+++ b/about.html
@@ -26,10 +26,11 @@ During my travels, I have had the opportunity of seeing wildlife in a much deepe
      
                 
        </body>
-   
+   <nav>
 <img src=Linked.png><a href="Linked.png"></a>
 <img src=Instagram.png><a href="Instagram.png"></a>
 <img src=Pinterest.png><a href="Pinterest.png"></a>
+    </nav>
       <div class="a">
  
   
