--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <img src=SRojas.MightyWarrior1.jpg>
   <img src=SRojas.ShieldofFaith1.jpg>
   <img src=SRojas_Frontpage.jpg>    
-  <img src=SRojas_AboutMe.jpg>    
+  <img src=SRojas_AboutMe1.jpg>    
   <img src=SRojas_Works.jpg>   
   <img src=SRojas_Contact.jpg>
   
